<resources>
    <string name="app_name">DrinksCalculator</string>
    <string name="default_bac">.000</string>
    <string name="bac">Blood Alcohol Content</string>
    <string name="effects">Possible Effects</string>
    <string name="drive_heading">Dont Drive Until</string>
    <string name="zero_bac_heading">Time Until Sober</string>
    <string name="settings">Settings</string>
    <string name="default_time">-</string>
    <string name="add_drink">Add Drink</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="default_drink">1.0</string>
    <string name="weight">Weight(kg)</string>
    <string name="gender">Gender</string>
    <string name="reset_session">Reset Session</string>
    <string name="save">Save</string>
    <string name="standard_drinks">Standard Drinks</string>
    <string name="blank_description">Black Description</string>


    <string-array name="gender">
        <item>Male</item>
        <item>Female</item>
    </string-array>

</resources>
