<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.kieran.drinkscalculator.MainActivity">

    <TextView
        android:id="@+id/bac_display"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="64dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/default_bac"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
        android:textSize="100sp"
        app:layout_constraintBottom_toTopOf="@+id/drinkUnits"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.32999998" />

    <TextView
        android:id="@+id/bac_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/bac"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/bac_display"
        app:layout_constraintStart_toStartOf="@+id/bac_display"
        app:layout_constraintTop_toBottomOf="@+id/bac_display" />

    <TextView
        android:id="@+id/standard_drinks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/standard_drinks"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/drinkUnits"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/time_until_sober_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/zero_bac_heading"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/imageButton6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/time_until_drive_label"
        app:layout_constraintTop_toBottomOf="@+id/bac_label" />

    <TextView
        android:id="@+id/time_until_drive_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="102dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/drive_heading"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/imageButton7"
        app:layout_constraintEnd_toStartOf="@+id/time_until_sober_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bac_label" />

    <TextView
        android:id="@+id/time_until_drive_display"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/default_time"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/time_until_drive_label"
        app:layout_constraintStart_toStartOf="@+id/time_until_drive_label"
        app:layout_constraintTop_toBottomOf="@+id/time_until_drive_label" />

    <TextView
        android:id="@+id/time_until_sober_display"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/default_time"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/time_until_sober_label"
        app:layout_constraintStart_toStartOf="@+id/time_until_sober_label"
        app:layout_constraintTop_toBottomOf="@+id/time_until_sober_label" />

    <Button
        android:id="@+id/add_drink_button"
        style="@android:style/Widget.Holo.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:background="@color/accent_material_dark"
        android:onClick="onAddDrinkClick"
        android:text="@string/add_drink"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/drinkUnits"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:ems="10"
        android:inputType="textImeMultiLine|numberDecimal"
        android:singleLine="true"
        android:text="@string/default_drink"
        android:textAlignment="center"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Small"
        android:textColor="@android:color/background_light"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/add_drink_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="LabelFor" />

    <ImageButton
        android:id="@+id/imageButton4"
        style="@android:style/Widget.Holo.Button.Borderless.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:onClick="onRefreshClick"
        android:src="@drawable/ic_refresh_white_24dp"
        app:layout_constraintEnd_toStartOf="@+id/imageButton5"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/blank_description" />

    <ImageButton
        android:id="@+id/imageButton5"
        style="@android:style/Widget.Holo.Button.Borderless.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:onClick="onSettingsClick"
        android:src="@drawable/ic_settings_white_24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/blank_description" />

    <ImageButton
        android:id="@+id/imageButton6"
        style="@android:style/Widget.Holo.Light.Button.Borderless.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onPlusClick"
        android:src="@drawable/ic_add_white_18dp"
        app:layout_constraintBottom_toBottomOf="@+id/drinkUnits"
        app:layout_constraintStart_toEndOf="@+id/drinkUnits"
        app:layout_constraintTop_toTopOf="@+id/drinkUnits"
        android:contentDescription="@string/blank_description" />

    <ImageButton
        android:id="@+id/imageButton7"
        style="@android:style/Widget.Holo.Button.Borderless.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onMinusClick"
        android:src="@drawable/ic_remove_white_18dp"
        app:layout_constraintBottom_toBottomOf="@+id/drinkUnits"
        app:layout_constraintEnd_toStartOf="@+id/drinkUnits"
        app:layout_constraintTop_toTopOf="@+id/drinkUnits"
        android:contentDescription="@string/blank_description" />

</android.support.constraint.ConstraintLayout>
